--- a/TravelApp/app/src/main/res/layout/activity_masjid.xml
+++ b/TravelApp/app/src/main/res/layout/activity_masjid.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar_masjid"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@color/blue"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextAppearance="@style/Toolbar.TitleText" />
