--- a/TravelApp/app/src/main/res/values-night/themes.xml
+++ b/TravelApp/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TravelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar" tools:targetApi="lollipop">
+    <style name="Theme.TravelApp" parent="Theme.MaterialComponents.DayNight.NoActionBar" tools:targetApi="lollipop">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
