merubah icon aplikasi dan penyesuaian akhir

--- a/TravelApp/app/src/main/res/layout/activity_detail_wisata.xml
+++ b/TravelApp/app/src/main/res/layout/activity_detail_wisata.xml
@@ -125,8 +125,9 @@
 
                 <Button
                     android:id="@+id/roadmap_button"
-                    android:layout_width="match_parent"
+                    android:layout_width="310dp"
                     android:layout_height="70dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/custom_button"
