--- a/TravelApp/app/src/main/res/layout/item_list_wisata.xml
+++ b/TravelApp/app/src/main/res/layout/item_list_wisata.xml
@@ -7,7 +7,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
